--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "sitemap": "^7.1.1",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.9"
   },
