--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "react-router-sitemap": "^1.2.0",
     "sitemap": "^7.1.1",
+    "stream": "^0.0.2",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.9"
   },
