--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.5.0",
     "react-router-dom": "^6.9.0",
     "react-router-sitemap": "^1.2.0",
     "sitemap": "^7.1.1",
