--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "@next/third-parties": "^14.1.3",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
