--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "@next/third-parties": "^14.1.3",
+    "@vercel/analytics": "^1.2.2",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
