--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.12",
     "@next/third-parties": "^14.1.3",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
